--- a/src/app/main/pages/area-manager/block/block.component.html
+++ b/src/app/main/pages/area-manager/block/block.component.html
@@ -1,4 +1,4 @@
-<div id="state-list" class="page-layout simple fullwidth">
+<div id="block-list" class="page-layout simple fullwidth">
 
     <!-- HEADER -->
     <div class="header accent p-24 h-160" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="row"
@@ -9,13 +9,13 @@
                 <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
                 <span class="secondary-text">Area Manager</span>
                 <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
-                <span class="secondary-text">Block's</span>
+                <span class="secondary-text">Blocks</span>
             </div>
-            <div class="h2 mt-16">Block's</div>
+            <div class="h2 mt-16">Blocks</div>
         </div>
 
         <a mat-raised-button class="reference-button mt-16 mt-sm-0"
-           href="https://github.com/swimlane/ngx-datatable">
+           href="javascript:;" (click)="updateBlock()">
             <mat-icon class="mr-8">add</mat-icon>
             <span>Add Block</span>
         </a>
@@ -24,13 +24,6 @@
 
     <!-- CONTENT -->
     <div class="content p-24">
-
-        <p class="mb-32">
-            <b>ngx-datatable</b> is a Angular component for presenting large and complex data.
-            It has all the features you would expect from any other table but in a light package with no external
-            dependencies. The table was designed to be extremely flexible and light; it doesn't make any assumptions
-            about your data or how you: filter, sort or page it.
-        </p>
 
         <ngx-datatable
             class="material"
@@ -44,9 +37,17 @@
             [reorderable]="reorderable"
             [limit]="10">
 
-            <ngx-datatable-column name="Name1" prop="name1"></ngx-datatable-column>
 
-            <ngx-datatable-column name="Company" prop="company"></ngx-datatable-column>
+            <ngx-datatable-column name="Block Name" prop="blockName"></ngx-datatable-column>
+
+            <ngx-datatable-column name="City" prop="city.cityName"></ngx-datatable-column>
+
+            <ngx-datatable-column name="Action">
+                <ng-template   let-row="row" ngx-datatable-cell-template>
+                    <button (click)="updateBlock(row)" mat-icon-button><i class="material-icons">edit</i></button>
+                    <button (click)="deleteBlock(row)" mat-icon-button><i class="material-icons">delete</i></button>
+                </ng-template>
+            </ngx-datatable-column>
         </ngx-datatable>
 
     </div>
