--- a/src/app/main/pages/area-manager/components/add-block/add-block.component.html
+++ b/src/app/main/pages/area-manager/components/add-block/add-block.component.html
@@ -1,3 +1,26 @@
-<p>
-  add-block works!
-</p>
+<form fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto" name="form" [formGroup]="blockForm">
+  
+  <div class="h2 mb-24">Block Update</div>
+  <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+      <mat-form-field  appearance="outline" fxFlex="100">
+        <mat-label>City</mat-label>
+        <input type="text" matInput formControlName="cityName" [matAutocomplete]="city" (keyup)="cityTyping=true" (blur)="checkCity()">
+        <mat-icon matSuffix class="disabled-text">domain</mat-icon>
+        <mat-autocomplete #city="matAutocomplete">
+          <mat-option *ngFor="let city of filteredCity | async" [value]="city.cityName"  (onSelectionChange)="onSelectCity($event, city);">
+            {{city.cityName}}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+      <mat-form-field appearance="outline" fxFlex="100">
+          <mat-label>Block Name</mat-label>
+          <input matInput formControlName="blockName">
+          <mat-icon matSuffix class="disabled-text">domain</mat-icon>
+      </mat-form-field>
+  </div>
+  <div fxLayout="row">
+    <button type="button"  (click)="updateBlock()" mat-raised-button color="primary">Save</button>
+  </div>
+</form>
