--- a/src/app/main/pages/area-manager/components/add-state/add-state.component.html
+++ b/src/app/main/pages/area-manager/components/add-state/add-state.component.html
@@ -1,3 +1,26 @@
-<p>
-  add-state works!
-</p>
+<form fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto" name="form" [formGroup]="stateForm">
+  
+    <div class="h2 mb-24">State Update</div>
+    <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+        <mat-form-field  appearance="outline" fxFlex="100">
+          <mat-label>Country</mat-label>
+          <input type="text" matInput formControlName="countryName" [matAutocomplete]="country" (keyup)="countryTyping=true" (blur)="checkCountry()">
+          <mat-icon matSuffix class="disabled-text">domain</mat-icon>
+          <mat-autocomplete #country="matAutocomplete">
+            <mat-option *ngFor="let country of filteredCountry | async" [value]="country.countryName"  (onSelectionChange)="onSelectCountry($event, country);">
+              {{country.countryName}}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+    </div>
+    <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+        <mat-form-field appearance="outline" fxFlex="100">
+            <mat-label>State Name</mat-label>
+            <input matInput formControlName="stateName">
+            <mat-icon matSuffix class="disabled-text">domain</mat-icon>
+        </mat-form-field>
+    </div>
+    <div fxLayout="row">
+      <button type="button"  (click)="updateState()" mat-raised-button color="primary">Save</button>
+    </div>
+</form>
