--- a/src/app/main/pages/area-manager/country/country.component.html
+++ b/src/app/main/pages/area-manager/country/country.component.html
@@ -51,7 +51,8 @@
 
             <ngx-datatable-column name="Action">
                 <ng-template   let-row="row" ngx-datatable-cell-template>
-                    a
+                    <button (click)="updateCountry(row)" mat-icon-button><i class="material-icons">edit</i></button>
+                    <button (click)="deleteCountry(row)" mat-icon-button><i class="material-icons">delete</i></button>
                 </ng-template>
             </ngx-datatable-column>
         </ngx-datatable>
