User access update

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,11 @@
     background-color: rgb(6, 70, 6) !important;
     color: #fff;
 }
+
+.text-success {
+    color: rgb(6, 70, 6) !important;
+}
+
+.text-danger {
+    color: rgba(226, 17, 17, 0.89) !important;
+}
