Adh crete updates

--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -28,15 +28,15 @@
             <button mat-button [matMenuTriggerFor]="userMenu"
                     class="user-button">
                 <div fxLayout="row" fxLayoutAlign="center center">
-                    <img class="avatar mr-0 mr-sm-16" src="assets/images/avatars/Velazquez.jpg">
-                    <span class="username mr-12" fxHide fxShow.gt-sm>Charlie Adams</span>
+                    <img class="avatar mr-0 mr-sm-16" src="{{ ((_auth.loggedInUser | async).user.profilePic)?_auth.imageUrl + (_auth.loggedInUser | async).user.profilePic:'assets/images/avatars/profile.jpg' }}">
+                    <span class="username mr-12" fxHide fxShow.gt-sm>{{ (_auth.loggedInUser | async).user.firstName + " " +  (_auth.loggedInUser | async).user.lastName }}</span>
                     <mat-icon class="s-16" fxHide.xs>keyboard_arrow_down</mat-icon>
                 </div>
             </button>
 
             <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
 
-                <button mat-menu-item>
+                <button mat-menu-item [routerLink]="['/admin/profile']">
                     <mat-icon>account_circle</mat-icon>
                     <span>My Profile</span>
                 </button>
@@ -46,7 +46,7 @@
                     <span>Inbox</span>
                 </button>
 
-                <button mat-menu-item (click)="authService.logout()">
+                <button mat-menu-item (click)="_auth.logout()">
                     <mat-icon>exit_to_app</mat-icon>
                     <span>Logout</span>
                 </button>
