--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -27,10 +27,10 @@
 
     <div class="user" fxLayout="column" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
-        <div class="h3 username">Charlie Adams</div>
-        <div class="h5 email hint-text mt-8">adams.charlie@mail.com</div>
+        <div class="h3 username">{{ (_auth.loggedInUser | async).user.firstName + " " +  (_auth.loggedInUser | async).user.lastName }}</div>
+        <div class="h5 email hint-text mt-8">{{ (_auth.loggedInUser | async).user.email }}</div>
         <div class="avatar-container" [ngClass]="fuseConfig.layout.navbar.primaryBackground">
-            <img class="avatar" src="assets/images/avatars/Velazquez.jpg">
+            <img class="avatar" src="{{ ((_auth.loggedInUser | async).user.profilePic)?_auth.imageUrl + (_auth.loggedInUser | async).user.profilePic:'assets/images/avatars/profile.jpg' }}">
         </div>
 
     </div>
